--- a/spec/vcr_cassettes/ExecutesStripePayment/an_unsuccessful_credit_card_payment/takes_the_response_from_the_gateway.yml
+++ b/spec/vcr_cassettes/ExecutesStripePayment/an_unsuccessful_credit_card_payment/takes_the_response_from_the_gateway.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/tokens
     body:
       encoding: UTF-8
-      string: card[number]=4242424242424242&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
+      string: card[number]=4000000000000002&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.9.2
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 07 Mar 2018 19:58:19 GMT
+      - Fri, 09 Mar 2018 13:44:01 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '783'
+      - '780'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_4anTMZE4cX1nIg
+      - req_3PqMs7IDXPOlRM
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1C38P1G9Bw4keQMbh3ryJjQz",
+          "id": "tok_1C3lVtG9Bw4keQMbKP0FncqY",
           "object": "token",
           "card": {
-            "id": "card_1C38P0G9Bw4keQMbUx9Oadu4",
+            "id": "card_1C3lVtG9Bw4keQMbaB7HCeZI",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -77,27 +77,27 @@ http_interactions:
             "dynamic_last4": null,
             "exp_month": 12,
             "exp_year": 2019,
-            "fingerprint": "GX3g3BXI6WxEKoWQ",
+            "fingerprint": "i9Dv4BVMQje5WVos",
             "funding": "credit",
-            "last4": "4242",
+            "last4": "0002",
             "metadata": {},
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "176.119.124.235",
-          "created": 1520452699,
+          "client_ip": "37.203.17.15",
+          "created": 1520603041,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Wed, 07 Mar 2018 19:58:19 GMT
+  recorded_at: Fri, 09 Mar 2018 13:44:01 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=3000&currency=usd&source=tok_1C38P1G9Bw4keQMbh3ryJjQz&description=&metadata[reference]=8e421f7e6001264d181d
+      string: amount=2500&currency=usd&source=tok_1C3lVtG9Bw4keQMbKP0FncqY&description=&metadata[reference]=06e2d5b028f14813ca96
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.9.2
@@ -110,24 +110,24 @@ http_interactions:
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - 8e421f7e6001264d181d
+      - 06e2d5b028f14813ca96
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 402
+      message: Payment Required
     headers:
       Server:
       - nginx
       Date:
-      - Wed, 07 Mar 2018 19:58:20 GMT
+      - Fri, 09 Mar 2018 13:44:03 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '1782'
+      - '201'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -143,93 +143,25 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - 8e421f7e6001264d181d
+      - 06e2d5b028f14813ca96
       Original-Request:
-      - req_FeTjeyUlfX3tCb
+      - req_F211ADVTkhh7CB
       Request-Id:
-      - req_FeTjeyUlfX3tCb
+      - req_F211ADVTkhh7CB
       Stripe-Version:
       - '2018-02-06'
-      Strict-Transport-Security:
-      - max-age=31556926; includeSubDomains; preload
     body:
       encoding: UTF-8
       string: |
         {
-          "id": "ch_1C38P2G9Bw4keQMblJ3MbwxY",
-          "object": "charge",
-          "amount": 3000,
-          "amount_refunded": 0,
-          "application": null,
-          "application_fee": null,
-          "balance_transaction": "txn_1C38P2G9Bw4keQMblryWnMdR",
-          "captured": true,
-          "created": 1520452700,
-          "currency": "usd",
-          "customer": null,
-          "description": "",
-          "destination": null,
-          "dispute": null,
-          "failure_code": null,
-          "failure_message": null,
-          "fraud_details": {},
-          "invoice": null,
-          "livemode": false,
-          "metadata": {
-            "reference": "8e421f7e6001264d181d"
-          },
-          "on_behalf_of": null,
-          "order": null,
-          "outcome": {
-            "network_status": "approved_by_network",
-            "reason": null,
-            "risk_level": "normal",
-            "seller_message": "Payment complete.",
-            "type": "authorized"
-          },
-          "paid": true,
-          "receipt_email": null,
-          "receipt_number": null,
-          "refunded": false,
-          "refunds": {
-            "object": "list",
-            "data": [],
-            "has_more": false,
-            "total_count": 0,
-            "url": "/v1/charges/ch_1C38P2G9Bw4keQMblJ3MbwxY/refunds"
-          },
-          "review": null,
-          "shipping": null,
-          "source": {
-            "id": "card_1C38P0G9Bw4keQMbUx9Oadu4",
-            "object": "card",
-            "address_city": null,
-            "address_country": null,
-            "address_line1": null,
-            "address_line1_check": null,
-            "address_line2": null,
-            "address_state": null,
-            "address_zip": null,
-            "address_zip_check": null,
-            "brand": "Visa",
-            "country": "US",
-            "customer": null,
-            "cvc_check": "pass",
-            "dynamic_last4": null,
-            "exp_month": 12,
-            "exp_year": 2019,
-            "fingerprint": "GX3g3BXI6WxEKoWQ",
-            "funding": "credit",
-            "last4": "4242",
-            "metadata": {},
-            "name": null,
-            "tokenization_method": null
-          },
-          "source_transfer": null,
-          "statement_descriptor": null,
-          "status": "succeeded",
-          "transfer_group": null
+          "error": {
+            "message": "Your card was declined.",
+            "type": "card_error",
+            "code": "card_declined",
+            "decline_code": "generic_decline",
+            "charge": "ch_1C3lVuG9Bw4keQMbnW6ugCcI"
+          }
         }
     http_version: 
-  recorded_at: Wed, 07 Mar 2018 19:58:21 GMT
+  recorded_at: Fri, 09 Mar 2018 13:44:03 GMT
 recorded_with: VCR 4.0.0
