--- a/spec/vcr_cassettes/ExecutesStripePayment/successful_credit_card_payment/takes_the_response_from_the_gateway.yml
+++ b/spec/vcr_cassettes/ExecutesStripePayment/successful_credit_card_payment/takes_the_response_from_the_gateway.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/tokens
     body:
       encoding: UTF-8
-      string: card[number]=4000000000000002&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
+      string: card[number]=4242424242424242&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.9.2
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 07 Mar 2018 19:58:22 GMT
+      - Fri, 09 Mar 2018 13:43:58 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '783'
+      - '780'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_VdQUSruNT28vDC
+      - req_GBiMgNEvh8atyp
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1C38P4G9Bw4keQMbNrfzw43G",
+          "id": "tok_1C3lVqG9Bw4keQMbicUvl4GE",
           "object": "token",
           "card": {
-            "id": "card_1C38P4G9Bw4keQMbdbSenoBo",
+            "id": "card_1C3lVqG9Bw4keQMbP9McHpsv",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -77,27 +77,27 @@ http_interactions:
             "dynamic_last4": null,
             "exp_month": 12,
             "exp_year": 2019,
-            "fingerprint": "i9Dv4BVMQje5WVos",
+            "fingerprint": "GX3g3BXI6WxEKoWQ",
             "funding": "credit",
-            "last4": "0002",
+            "last4": "4242",
             "metadata": {},
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "176.119.124.235",
-          "created": 1520452702,
+          "client_ip": "37.203.17.15",
+          "created": 1520603038,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Wed, 07 Mar 2018 19:58:22 GMT
+  recorded_at: Fri, 09 Mar 2018 13:43:58 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=3000&currency=usd&source=tok_1C38P4G9Bw4keQMbNrfzw43G&description=&metadata[reference]=da8125cd9524507b6c87
+      string: amount=2500&currency=usd&source=tok_1C3lVqG9Bw4keQMbicUvl4GE&description=&metadata[reference]=cf7378d1884efab4d8d8
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.9.2
@@ -110,24 +110,24 @@ http_interactions:
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - da8125cd9524507b6c87
+      - cf7378d1884efab4d8d8
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
   response:
     status:
-      code: 402
-      message: Payment Required
+      code: 200
+      message: OK
     headers:
       Server:
       - nginx
       Date:
-      - Wed, 07 Mar 2018 19:58:23 GMT
+      - Fri, 09 Mar 2018 13:44:00 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '201'
+      - '1782'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -143,25 +143,93 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - da8125cd9524507b6c87
+      - cf7378d1884efab4d8d8
       Original-Request:
-      - req_vqay305lwgmPTO
+      - req_INBn6ArJc5dmMt
       Request-Id:
-      - req_vqay305lwgmPTO
+      - req_INBn6ArJc5dmMt
       Stripe-Version:
       - '2018-02-06'
+      Strict-Transport-Security:
+      - max-age=31556926; includeSubDomains; preload
     body:
       encoding: UTF-8
       string: |
         {
-          "error": {
-            "message": "Your card was declined.",
-            "type": "card_error",
-            "code": "card_declined",
-            "decline_code": "generic_decline",
-            "charge": "ch_1C38P5G9Bw4keQMbF8rJx1gl"
-          }
+          "id": "ch_1C3lVrG9Bw4keQMbhTZFwIVm",
+          "object": "charge",
+          "amount": 2500,
+          "amount_refunded": 0,
+          "application": null,
+          "application_fee": null,
+          "balance_transaction": "txn_1C3lVsG9Bw4keQMbdUkQBn8d",
+          "captured": true,
+          "created": 1520603039,
+          "currency": "usd",
+          "customer": null,
+          "description": "",
+          "destination": null,
+          "dispute": null,
+          "failure_code": null,
+          "failure_message": null,
+          "fraud_details": {},
+          "invoice": null,
+          "livemode": false,
+          "metadata": {
+            "reference": "cf7378d1884efab4d8d8"
+          },
+          "on_behalf_of": null,
+          "order": null,
+          "outcome": {
+            "network_status": "approved_by_network",
+            "reason": null,
+            "risk_level": "normal",
+            "seller_message": "Payment complete.",
+            "type": "authorized"
+          },
+          "paid": true,
+          "receipt_email": null,
+          "receipt_number": null,
+          "refunded": false,
+          "refunds": {
+            "object": "list",
+            "data": [],
+            "has_more": false,
+            "total_count": 0,
+            "url": "/v1/charges/ch_1C3lVrG9Bw4keQMbhTZFwIVm/refunds"
+          },
+          "review": null,
+          "shipping": null,
+          "source": {
+            "id": "card_1C3lVqG9Bw4keQMbP9McHpsv",
+            "object": "card",
+            "address_city": null,
+            "address_country": null,
+            "address_line1": null,
+            "address_line1_check": null,
+            "address_line2": null,
+            "address_state": null,
+            "address_zip": null,
+            "address_zip_check": null,
+            "brand": "Visa",
+            "country": "US",
+            "customer": null,
+            "cvc_check": "pass",
+            "dynamic_last4": null,
+            "exp_month": 12,
+            "exp_year": 2019,
+            "fingerprint": "GX3g3BXI6WxEKoWQ",
+            "funding": "credit",
+            "last4": "4242",
+            "metadata": {},
+            "name": null,
+            "tokenization_method": null
+          },
+          "source_transfer": null,
+          "statement_descriptor": null,
+          "status": "succeeded",
+          "transfer_group": null
         }
     http_version: 
-  recorded_at: Wed, 07 Mar 2018 19:58:24 GMT
+  recorded_at: Fri, 09 Mar 2018 13:44:00 GMT
 recorded_with: VCR 4.0.0
