--- a/spec/vcr_cassettes/StripeCharge/failure/handles_failure.yml
+++ b/spec/vcr_cassettes/StripeCharge/failure/handles_failure.yml
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 07 Mar 2018 19:58:29 GMT
+      - Fri, 09 Mar 2018 13:43:47 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '783'
+      - '780'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_1wCBA8ep9F2enx
+      - req_xzuMdoQrxNfRtb
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1C38PAG9Bw4keQMbD1bcJxhV",
+          "id": "tok_1C3lVfG9Bw4keQMblZueIcWP",
           "object": "token",
           "card": {
-            "id": "card_1C38PAG9Bw4keQMbBJkWflEX",
+            "id": "card_1C3lVfG9Bw4keQMbGSb122NM",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,20 +84,20 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "176.119.124.235",
-          "created": 1520452708,
+          "client_ip": "37.203.17.15",
+          "created": 1520603027,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Wed, 07 Mar 2018 19:58:29 GMT
+  recorded_at: Fri, 09 Mar 2018 13:43:47 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=3000&currency=usd&source=tok_1C38PAG9Bw4keQMbD1bcJxhV&description=&metadata[reference]=c1eee0dfb46fd45476ac
+      string: amount=3000&currency=usd&source=tok_1C3lVfG9Bw4keQMblZueIcWP&description=&metadata[reference]=542878419a3f0c5de6b3
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.9.2
@@ -110,7 +110,7 @@ http_interactions:
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - c1eee0dfb46fd45476ac
+      - 542878419a3f0c5de6b3
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -123,7 +123,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 07 Mar 2018 19:58:30 GMT
+      - Fri, 09 Mar 2018 13:43:48 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -143,11 +143,11 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - c1eee0dfb46fd45476ac
+      - 542878419a3f0c5de6b3
       Original-Request:
-      - req_VF1QhSSPxIaCyW
+      - req_09TXKplZRfDiYH
       Request-Id:
-      - req_VF1QhSSPxIaCyW
+      - req_09TXKplZRfDiYH
       Stripe-Version:
       - '2018-02-06'
     body:
@@ -159,9 +159,9 @@ http_interactions:
             "type": "card_error",
             "code": "card_declined",
             "decline_code": "generic_decline",
-            "charge": "ch_1C38PCG9Bw4keQMbDAgzblFr"
+            "charge": "ch_1C3lVgG9Bw4keQMbuNQHuJVd"
           }
         }
     http_version: 
-  recorded_at: Wed, 07 Mar 2018 19:58:30 GMT
+  recorded_at: Fri, 09 Mar 2018 13:43:49 GMT
 recorded_with: VCR 4.0.0
