Set up notifications
- adjust a Rails mailer to notify customers about the success or failure
of their purchases
- integrate Rollbar for administrative notifications

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -24,6 +24,7 @@ development: &default
   paypal_client_id: <%= ENV["PAYPAL_CLIENT_ID"] %>
   paypal_client_secret: <%= ENV["PAYPAL_CLIENT_SECRET"] %>
   host_name: "97b78fe6.ngrok.io"
+  rollbar_server_side_access_token: "d71384afb5e6466796261a57ca9603cc"
 
 test:
   <<: *default
