--- a/spec/vcr_cassettes/CreatesPlan/creates_a_plan.yml
+++ b/spec/vcr_cassettes/CreatesPlan/creates_a_plan.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.stripe.com/v1/tokens
+    uri: https://api.stripe.com/v1/plans
     body:
       encoding: UTF-8
-      string: card[number]=4000000000000002&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
+      string: id=basic_monthly_1521126117&product[name]=Basic+Monthly&amount=2000&currency=usd&interval=month&interval_count=1&nickname=Basic+Monthly
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.9.2
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:02:15 GMT
+      - Thu, 15 Mar 2018 15:01:58 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '780'
+      - '304'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_PvuVaUHCEx4yWD
+      - req_iUVjzuKi0453MG
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,46 +58,27 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1C5xatG9Bw4keQMbt5sKV6Ge",
-          "object": "token",
-          "card": {
-            "id": "card_1C5xasG9Bw4keQMbjDINPe5s",
-            "object": "card",
-            "address_city": null,
-            "address_country": null,
-            "address_line1": null,
-            "address_line1_check": null,
-            "address_line2": null,
-            "address_state": null,
-            "address_zip": null,
-            "address_zip_check": null,
-            "brand": "Visa",
-            "country": "US",
-            "cvc_check": "unchecked",
-            "dynamic_last4": null,
-            "exp_month": 12,
-            "exp_year": 2019,
-            "fingerprint": "i9Dv4BVMQje5WVos",
-            "funding": "credit",
-            "last4": "0002",
-            "metadata": {},
-            "name": null,
-            "tokenization_method": null
-          },
-          "client_ip": "31.31.107.53",
-          "created": 1521126135,
+          "id": "basic_monthly_1521126117",
+          "object": "plan",
+          "amount": 2000,
+          "created": 1521126118,
+          "currency": "usd",
+          "interval": "month",
+          "interval_count": 1,
           "livemode": false,
-          "type": "card",
-          "used": false
+          "metadata": {},
+          "nickname": "Basic Monthly",
+          "product": "prod_CUxVhluUThzbIi",
+          "trial_period_days": null
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:02:15 GMT
+  recorded_at: Thu, 15 Mar 2018 15:01:58 GMT
 - request:
-    method: post
-    uri: https://api.stripe.com/v1/charges
+    method: get
+    uri: https://api.stripe.com/v1/plans/basic_monthly_1521126117
     body:
-      encoding: UTF-8
-      string: amount=2500&currency=usd&source=tok_1C5xatG9Bw4keQMbt5sKV6Ge&description=&metadata[reference]=f6524fc545839f31af9b
+      encoding: US-ASCII
+      string: ''
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.9.2
@@ -109,25 +90,23 @@ http_interactions:
       - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
-      Idempotency-Key:
-      - f6524fc545839f31af9b
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
   response:
     status:
-      code: 402
-      message: Payment Required
+      code: 200
+      message: OK
     headers:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:02:16 GMT
+      - Thu, 15 Mar 2018 15:01:59 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '201'
+      - '304'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -142,26 +121,29 @@ http_interactions:
       - '300'
       Cache-Control:
       - no-cache, no-store
-      Idempotency-Key:
-      - f6524fc545839f31af9b
-      Original-Request:
-      - req_e2dyA3WX1EI93G
       Request-Id:
-      - req_e2dyA3WX1EI93G
+      - req_j2CD4IxseJMbgu
       Stripe-Version:
       - '2018-02-06'
+      Strict-Transport-Security:
+      - max-age=31556926; includeSubDomains; preload
     body:
       encoding: UTF-8
       string: |
         {
-          "error": {
-            "message": "Your card was declined.",
-            "type": "card_error",
-            "code": "card_declined",
-            "decline_code": "generic_decline",
-            "charge": "ch_1C5xauG9Bw4keQMbCezmOaZd"
-          }
+          "id": "basic_monthly_1521126117",
+          "object": "plan",
+          "amount": 2000,
+          "created": 1521126118,
+          "currency": "usd",
+          "interval": "month",
+          "interval_count": 1,
+          "livemode": false,
+          "metadata": {},
+          "nickname": "Basic Monthly",
+          "product": "prod_CUxVhluUThzbIi",
+          "trial_period_days": null
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:02:16 GMT
+  recorded_at: Thu, 15 Mar 2018 15:02:00 GMT
 recorded_with: VCR 4.0.0
